--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ main {
   margin-top: 20px;
   gap: 15px;
 }
-.section-btn-filter .dropbtn {
+.section-btn-filter .dropbtn1 {
   background-color: #3282F7;
   color: white;
   border-radius: 5px;
@@ -39,7 +39,7 @@ main {
   border: none;
   cursor: pointer;
 }
-.section-btn-filter .dropbtn:hover, .section-btn-filter .dropbtn:focus {
+.section-btn-filter .dropbtn1:hover, .section-btn-filter .dropbtn1:focus {
   background-color: #3282F7;
 }
 .section-btn-filter #myInputIngredients {
@@ -66,8 +66,11 @@ main {
 .section-btn-filter .dropdown-content {
   display: none;
   position: absolute;
+  font-weight: bold;
+  color: #fff;
   background-color: #3282F7;
-  min-width: 230px;
+  width: 550px;
+  height: auto;
   border: 1px solid #3282F7;
   border-radius: 5px;
   z-index: 1;
@@ -85,6 +88,11 @@ main {
 .section-btn-filter .show {
   display: block;
 }
+.section-btn-filter .dropdown-ingredients-width {
+  width: 450px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
 .section-btn-filter .dropbtn-appareil {
   background-color: #68D9A4;
   color: white;
@@ -95,7 +103,7 @@ main {
   border: none;
   cursor: pointer;
 }
-.section-btn-filter .dropbtn-appareil:hover, .section-btn-filter .dropbtn:focus {
+.section-btn-filter .dropbtn-appareil:hover, .section-btn-filter .dropbtn2:focus {
   background-color: #68D9A4;
 }
 .section-btn-filter #myInputAppareil {
@@ -133,7 +141,7 @@ main {
   border: none;
   cursor: pointer;
 }
-.section-btn-filter .dropbtn-ustensiles:hover, .section-btn-filter .dropbtn:focus {
+.section-btn-filter .dropbtn-ustensiles:hover, .section-btn-filter .dropbtn3:focus {
   background-color: #ED6454;
 }
 .section-btn-filter #myInputUstensiles {
@@ -170,6 +178,17 @@ main {
     flex-direction: column;
   }
 }
+.ul-btn-ingredients {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+.ul-btn-ingredients li {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .principal-header {
   max-width: 1240px;
   margin: auto;
@@ -239,7 +258,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 380px;
-  height: 364px;
+  height: auto;
 }
 .box-recipes .card-recipe figure {
   margin: 0;
@@ -292,7 +311,11 @@ main {
   flex-direction: column;
 }
 .box-recipes .card-recipe .bottom-part-card-recipe .ingredients-explication p {
-  width: 40%;
+  width: 60%;
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 375px) {
