--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -13,7 +13,7 @@
         display: flex;
         flex-direction: column;
         width: 380px;
-        height: 364px;
+        height: auto;
         figure {
             margin: 0;
             border-top-left-radius: 5px;
@@ -63,7 +63,11 @@
                     flex-direction: column;
                 }
                 p {
-                    width: 40%;
+                    width: 60%;
+                    margin: 0;
+                    white-space:nowrap;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
                 }
             }
         }
